--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,7 @@
 
 
     <application
-        android:name=".SimpleMPApplication"
+        android:name=".MusicApplication"
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:requestLegacyExternalStorage="true"
@@ -23,13 +23,13 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.ComposeSimpleMP"
+        android:theme="@style/Theme.ComposeMusic"
         tools:targetApi="31">
 
         <activity
             android:name=".frontend.activities.main.MainActivity"
             android:exported="true"
-            android:theme="@style/Theme.ComposeSimpleMP">
+            android:theme="@style/Theme.ComposeMusic">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
